--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,19 @@
     </dependency>
   </dependencies>
   
+  <distributionManagement>
+        <repository>
+            <id>jenkins</id>
+            <name>jenkins-releases</name>
+            <url>http://artifactory/artifactory/libs-release-local</url>
+        </repository>
+        <snapshotRepository>
+            <id>jenkins</id>
+            <name>jenkins-snapshots</name>
+            <url>http://artifactory/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
+
   <build>
     <plugins>
     
